--- a/requirements.txt
+++ b/requirements.txt
@@ -28,6 +28,7 @@ pexpect==4.8.0
 pickleshare==0.7.5
 Pillow==8.0.1
 prompt-toolkit==3.0.8
+psycopg2==2.8.6
 ptyprocess==0.6.0
 Pygments==2.7.3
 PyMySQL==0.10.1
