--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 alembic==1.4.3
 appnope==0.1.2
 backcall==0.2.0
+cffi==1.14.4
 click==7.1.2
 decorator==4.4.2
 dnspython==2.0.0
@@ -30,7 +31,9 @@ Pillow==8.0.1
 prompt-toolkit==3.0.8
 psycopg2==2.8.6
 ptyprocess==0.6.0
+pycparser==2.20
 Pygments==2.7.3
+pyheif==0.5.1
 PyMySQL==0.10.1
 python-dateutil==2.8.1
 python-dotenv==0.15.0
